--- a/src/assets/common.scss
+++ b/src/assets/common.scss
@@ -15,8 +15,8 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
 	font: inherit;
+	font-size: 12px;
 	vertical-align: baseline;
 	margin-bottom: 0;
   margin-top: 0;
